fix(translator.comp) showing scrollbar when animating

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,4 @@
 @import '~src/variables';
 :host {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1000px;
 }
