--- a/src/app/translator/translator.component.scss
+++ b/src/app/translator/translator.component.scss
@@ -1,6 +1,9 @@
 @import '~src/variables';
 :host {
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1000px;
 }
 .status {
   border-radius: 4px;
